--- a/react-client/src/App.css
+++ b/react-client/src/App.css
@@ -5,17 +5,16 @@ body {
 }
 
 .main-container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 50px 1fr 300px;
 }
 
 
 .middle-section {
     background-color: #4d447ad1;
-}
-
-.middle-container {
+    overflow-y: hidden;
+    
     display: flex;
     flex-direction: row;
     min-width: 100vh;
@@ -29,13 +28,10 @@ body {
 
 .footer {
     background-color: #b7cad1;
-    /* Optional: background color */
-    height: 300px;
 }
 
 .header {
     background-color: #997171;
-    height: 100px;
 }
 
 #col1{
