--- a/react-client/src/SpotifyApp/Parts/Player.css
+++ b/react-client/src/SpotifyApp/Parts/Player.css
@@ -1,8 +1,7 @@
 .playerRoot{border-style: solid;}
 
-.albumImage{
-    width: 300px;
-    height: 300px;
+.imageHolder{
+    height: inherit;
 }
 
 
