--- a/react-client/src/SpotifyApp/Parts/Playlists/PlaylistViewer.css
+++ b/react-client/src/SpotifyApp/Parts/Playlists/PlaylistViewer.css
@@ -1,15 +1,20 @@
 .column {
     display: grid;
     grid-template-areas: "sh" "sc";
-    
-  }
-  
-  .sub-header {
+
+}
+
+.sub-header {
     grid-area: sh;
     background-color: #74f9e9;
-  }
-  
-  .scrollbox {
+}
+
+.scrollbox {
     overflow-y: scroll;
     grid-area: sc;
-  }
+}
+
+
+.pl-loader {
+    float: right;
+}
