--- a/react-client/src/SpotifyApp/Parts/Playlists/PlaylistViewer.css
+++ b/react-client/src/SpotifyApp/Parts/Playlists/PlaylistViewer.css
@@ -18,3 +18,12 @@
 .pl-loader {
     float: right;
 }
+
+.focusPlaylistImage{
+    height: 200px;
+    width: 200px;
+}
+
+.focusHeader{
+    height: 250px;
+}
